Fix: 코드스멜 수정 자바 버전 변경